--- a/css/card.css
+++ b/css/card.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    overflow: hidden;
 }
 
 .wrapper.cards .card .btn.no-border {
@@ -18,7 +19,6 @@
     /* margin-top: auto; */
 }
 
-.wrapper.cards .card,
 .wrapper.cards .card img,
 .wrapper.cards .card .overlay {
     border-radius: var(--borderRadius);
@@ -59,6 +59,17 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: var(--transition);
+}
+
+.wrapper.cards .card-image {
+    border-radius: var(--borderRadius);
+    overflow: hidden;
+}
+
+.wrapper.cards .card-image:hover img {
+    transform: scale(1.05);
+    transition: var(--transition);
 }
 
 
