--- a/css/card.css
+++ b/css/card.css
@@ -103,6 +103,10 @@
     gap: 60px;
 }
 
+.wrapper.cards .card {
+    overflow: unset;
+}
+
 
 .wrapper.cards .card-wrapper {
     flex: 0 1 40%;
@@ -117,7 +121,7 @@
     flex: 0 1 50%;
     flex-flow: row wrap;
     position: unset;
-    background-color: var(--wite);
+    background-color: var(--white);
 }
 
 .wrapper.cards .card-wrapper img {
