--- a/css/card.css
+++ b/css/card.css
@@ -14,6 +14,12 @@
     border-radius: var(--borderRadius);
 }
 
+.wrapper.cards .card .tag {
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
 .wrapper.cards .card .btn.no-border {
     font-size: 14px;
     border: none;
