--- a/posts/css/style.css
+++ b/posts/css/style.css
@@ -69,6 +69,10 @@
     flex: 0 1;
 }
 
+.wrapper.cards.related-cards {
+    width: 70%;
+}
+
 .wrapper.cards.related-cards .card {
     flex: 1 0;
 }
@@ -89,6 +93,7 @@
 .wrapper.cards.related-cards .card .btn {
     font-size: 12px;
     margin-top: auto;
+    margin-left: 20px;
 }
 
 .intro h1 {
