--- a/posts/css/style.css
+++ b/posts/css/style.css
@@ -66,7 +66,8 @@
 }
 
 .wrapper.cards .card.related-card .card-image {
-    flex: 0 1;
+    flex: 1 0;
+    overflow: hidden;
 }
 
 .wrapper.cards.related-cards {
@@ -80,6 +81,7 @@
 .wrapper.cards.related-cards .card .card-content {
     bottom: 20px;
     left: 20px;
+    flex: 1 0;
 }
 
 .wrapper.cards.related-cards .card .card-content .tag {
