--- a/css/card.css
+++ b/css/card.css
@@ -4,8 +4,6 @@
     gap: 40px;
 }
 
-
-
 .wrapper.cards .card {
     flex: 1 0 40%;
     display: flex;
@@ -19,6 +17,8 @@
 .wrapper.cards .card .tag {
     text-transform: uppercase;
     font-size: 14px;
+    font-weight: 700;
+    color: #606478;
     margin-bottom: 10px;
 }
 
@@ -153,9 +153,12 @@
     background-color: transparent;
 }
 
-.wrapper.cards .card.archive-card .card-content h5, 
-.wrapper.cards .card.archive-card .card-content p {
+.wrapper.cards .card.archive-card .card-content h5 {
     color: var(--black);
+}
+
+.wrapper.cards .card.archive-card .card-content p {
+    color: #606478;
 }
 
 .wrapper.cards .card.archive-card .card-content h5 {
