--- a/css/global.css
+++ b/css/global.css
@@ -403,6 +403,52 @@ img {
     margin-bottom: 0;
 }
 
+.filters.section {
+    background-color: var(--light-grey);
+}
+
+.filters.section .wrapper {
+    gap: 40px;
+}
+
+.filter .wrapper .filter-btn {
+    font-size: 18px;
+    font-weight: 700;
+    opacity: 0.7;
+    color: var(--black);
+    transition: var(--transition);
+}
+
+.filter .wrapper .filter-btn:hover {
+    cursor: pointer;
+    opacity: 1;
+    transition: var(--transition);
+}
+
+.filter .wrapper .filter-btn.active {
+    opacity: 1;
+    transition: var(--transition);
+}
+
+/* UNDERLINE ACTIVE FILTERS */
+.filter .filter-btn {
+    position: relative;
+    text-decoration: none;
+    padding-bottom: 5px;
+}
+
+.filter .filter-btn.active::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--primary);
+    animation: underline_filter 500ms ease-in-out;
+}
+
 
 @media (max-width: 560px) {
     .section .row .col {
