--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -99,7 +99,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: var(--black);
+    background-color: var(--white);
     transform: scaleX(0);
     transition: transform 0.3s ease;
 }
